# research-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_crane_loads.py
config/: default_config.yaml
output_crane/: run_context.json
prompts/data/: engineering_calculator_system.txt  engineering_calculator_user.txt  paper_extractor.txt  standards_calculator.txt  system.txt
prompts/research/: paper_analyzer.txt  query_builder.txt  synthesizer.txt  system.txt
specs/: 00_architecture.spec.md  01_research_agent.spec.md  02_data_agent.spec.md  03_ml_agent.spec.md  04_report_agent.spec.md  05_engineering_calculator.spec.md  class_diagram.md
src/research_agents/: __init__.py  ai_model.py  base_agent.py  config.py  pipeline.py  prompt_loader.py  pydantic_models.py
src/research_agents/agents/: data_agent.py  ml_agent.py  report_agent.py  research_agent.py
src/research_agents/agents/data/: assembler.py  engineering_calculator.py  gemini_adapter.py  paper_extractor.py  standards_calculator.py
src/research_agents/agents/ml/: errors.py  figure_plotter.py  model_runner.py  models.py  result_exporter.py
src/research_agents/agents/research/: models.py  paper_analyzer.py  query_builder.py  synthesizer.py
src/research_agents/agents/research/exporters/: bibtex.py  markdown_writer.py
src/research_agents/agents/research/searchers/: __init__.py  arxiv_searcher.py  base_searcher.py  elibrary_searcher.py  mdpi_searcher.py  semantic_scholar.py
tests/agents/: test_ml_agent.py
