[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "research-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "loguru>=0.7",

    # Data & ML
    "pandas>=2.2",
    "outboxml==0.10.0",

    # HTTP / APIs
    "httpx>=0.27",
    "arxiv>=2.1",
    "semanticscholar>=0.8",

    # LLM
    "anthropic>=0.28",
    "python-dotenv>=1.0",

    # Figures
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
